--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           </div>
     </header>
     <main>
+        <!-- team section  start-->
         <section class="teams display-flex ">
              <div class="team-img-container">
                 <img src="images/team1.png" alt="two Architects discussing about design">
@@ -76,9 +77,52 @@
                 </div>
             </div>
          </section>
+         <!-- feature section start -->
+          <section class="feature display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy </h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo atque quae tempora, repellendus est autem debitis unde alias iure nihil!</p>
+            </div>
+            <!-- feature card container -->
+            <div class="feature-card">
+                <h4 class="feature-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem odio molestiae quisquam earum eligendi ea officia numquam itaque dolorem temporibus.</p>
+              </div>
+              <div class="feature-card">
+                <h4 class="feature-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem odio molestiae quisquam earum eligendi ea officia numquam itaque dolorem temporibus.</p>
+              </div>
+              <div class="feature-card">
+                <h4 class="feature-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem odio molestiae quisquam earum eligendi ea officia numquam itaque dolorem temporibus.</p>
+              </div>
+              <div class="feature-card">
+                <h4 class="feature-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem odio molestiae quisquam earum eligendi ea officia numquam itaque dolorem temporibus.</p>
+              </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="Experience-bdge" class="btn-primary">
+                   <span id="Experience-year">10+Years</span>
+                   <br>
+                   <span>Experience</span>
+                    
+                </button>
+            </div>
+          </section>
          <!-- some facts -->
-          <section class="some facts">
-
+          <section class="Our Sponsors">
+            <div class="sponsors-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors-company">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
           </section>
     </main>
     <footer>
