added experience badge and made feature section responsive

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <div>
                 <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy </h3>
                 <p class="text-light-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo atque quae tempora, repellendus est autem debitis unde alias iure nihil!</p>
-            </div>
-            <!-- feature card container -->
+
+                            <!-- feature card container -->
             <div class="feature-card">
                 <h4 class="feature-title">Desktop and mobile version</h4>
                 <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem odio molestiae quisquam earum eligendi ea officia numquam itaque dolorem temporibus.</p>
@@ -100,9 +100,11 @@
                 <h4 class="feature-title">Desktop and mobile version</h4>
                 <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem odio molestiae quisquam earum eligendi ea officia numquam itaque dolorem temporibus.</p>
               </div>
-            <div>
+            </div>
+
+            <div class="featured-architect">
                 <img src="images/architect.png" alt="">
-                <button id="Experience-bdge" class="btn-primary">
+                <button id="Experience-badge" class="btn-primary">
                    <span id="Experience-year">10+Years</span>
                    <br>
                    <span>Experience</span>
